website/style.css
/*
 * 
 * RGX / Text Analyzer is an online text editing and filtering tool,
 * created by Mathias Grindsäter and Örn Segerstedt.
 * 
 * This file handles the styling of the application.
 *
 */

/* * * * * * * * * * * * * * * * * * *
 *                                   *
 *                                   *
 *       – TABLE OF CONTENTS –       *
 *                                   *
 *      I....Global                  *
 *      II...Page elements           *
 *      III..                        *
 *       :. i....???                 *
 *       :. ii...???                 *
 *       :. iii..???                 *
 *                                   *
 *                                   *
 *    © 2022 mathiasgrin & eeegl     *
 *                                   *
 *                                   *
 * * * * * * * * * * * * * * * * * * */


 /* 
  * 
  * I. GLOBAL
  * 
  */


/* Hide elements while */
.box-1 {
    display: none;
}

/* Base settings */
* {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}

/* Change to flex row layout */
#filter,
#counters,
#remove-section,
.replace-buttons,
.next-or-before-buttons,
.btns form {
    flex-direction: row;
}

body {
    width: 66vw;
    margin: auto;
    color: var(--color-text);
    background-color: var(--color-background);
}

/* Text */
body, textarea, button {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
}

/* Colors */
:root {
    --color-background: #F5F3E5;
    --color-boxes: #F8F8F7;
    --color-buttons: #776F6D;
    --color-text: #776F6D;
    --color-highlight: #FFEB00;
    --color-selected: lightsalmon;
}
.btns {max-width: 850px; width: 100%; margin: 0 auto;}
.four { width: 32.26%; max-width: 32.26%;}

.form .plan input{
	display: none;
}

.form label{
	position: relative;
	color: #fff;
	background-color: #aaa;
	font-size: 26px;
	text-align: center;
	height: 150px;
	line-height: 150px;
	display: block;
	cursor: pointer;
	border: 3px solid transparent;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.form input:checked + label{
	border: 3px solid #333;
	background-color: #2fcc71;
}

.form input:checked + label:after{
	content: "\2713";
	width: 40px;
	height: 40px;
	line-height: 40px;
	border-radius: 100%;
	border: 2px solid #333;
	background-color: #2fcc71;
	z-index: 999;
	position: absolute;
	top: -10px;
	right: -10px;
}










/* form > input {
    width: 100px;
    height: 100px;
    background: green;
} */

 /* 
  * 
  * II. PAGE ELEMENTS
  * 
  */


/* Basic input box styling */
textarea {
    width: 30em;
    padding: 1em;
    margin: 0.5em 0;
    resize: none;
}

textarea, #input-v2-container {
    background: var(--color-boxes);
    color: var(--color-text);
}

/* Styling for filter and edit section */
#filter {
    height: 20em;
    background: rebeccapurple;
}

#bars {
    background: mediumaquamarine;
}

#edit {
    background: sandybrown;
}

#copy-clear {
    background: powderblue;
}

.btns form {
    justify-content: left;
}

#replace-section {
    display: none;    
}

/* Container class affects almost the whole document */
.container {
    background-color: yellow;
}

/* box-1 is the main header section */
.box-1 {
    /* Creates space above, below and on the sides */
    padding: 20px;
    margin: 20px;
    text-align: center;
}

/* Only affect h1 in box-1 (main header) */
.box-1 h1 {
    text-decoration: underline;
    Letter-spacing: 0.2em;
}

#input-box {
    border: 1px dotted red;
    /* Border radius makes the edges smoother */
    border-radius: 5px;
    height: 200px;
    padding: 10px;
    display: none;
}

#input-box div {
    display: inline;
}

/* Input box version 2 */
#input-v2-container {
    width: 100%;
    height: 25em;
    position: relative;
    inset: 0;
    box-sizing: border-box;
    
}

#input-v2-container > * {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    padding: 1em;
    width: 100%;
    height: 100%;
    border: none;
    margin: 0;
    inset: 0;
    position: absolute;
}

#input-v2-highlight {
    /* background: blue; */
    display: inline;
    white-space: pre-wrap;
    overflow-y: scroll;
    color: transparent;
}

/* Prevent double scrollbars (hide highlight div scrollbar) */

/* Hide scrollbar for Chrome, Safari and Opera */
#input-v2-highlight::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
#input-v2-highlight {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

#input-v2-textbox {
    z-index: 1;
    background: transparent;
    resize: none;
}

/* TEXT HIGHLIGHTING */

mark {
    display: inline;
    background: var(--color-highlight);
    color: transparent;
}

.selected {
    background: var(--color-selected);
}

/* Miscellaneous */

#counters > div {
    margin: 0;
    height: 150px;
    width: 100%;
    justify-content: space-evenly;
    text-align: center;
    border-right: 1px solid red;
}

#counters > div:last-of-type {
    border-right: none;
}

#counters div div {
    padding: 1em;
    white-space: nowrap;
}

#counters {
    justify-content: center;
}

button {
    width: fit-content;
    padding: 10px;
    display: inline;
}

/* Reference to link. Notice that it looks through the whole href-string for "wiki" */
a[href*="wiki"] {
    color: darkblue;
}

/* References hovering on <a> elements such as links */
a:hover {
    color: darkorange;
}

/* References hovering of buttons */
button:hover {
    color: darkorange;
}

#footer {
    background-image: url(https://giffiles.alphacoders.com/360/36032.gif);
    background-size: cover;
    color: white;
}

